[package]
name = "chapaty"
version = "1.2.1"
edition = "2024"
authors = ["Len Williamson <lencewa13@gmail.com>"]
description = "An event-driven Rust engine for building and evaluating quantitative trading agents. Features a Gym-style API for algorithmic backtesting and reinforcement learning."
license = "Apache-2.0"
readme = "README.md"
# homepage = "https://www.chapaty.com"
repository = "https://github.com/LenWilliamson/chapaty"
keywords = [
    "rl",
    "finance",
    "gym",
    "backtesting",
]
categories = [
    "algorithms",
    "finance",
    "mathematics",
    "science",
    "simulation",
]
exclude = [
    "tests/*",
    ".cargo",
    ".github",
    ".vscode",
    ".gitignore",
    "Cargo.lock"
]

[dependencies]
async-channel = "2.5"
blake3 = "1.8"
bytes = "1.11"
chrono = "0.4"
chrono-tz = "0.10"
crossbeam = "0.8"
futures = "0.3"
hf-hub = "0.5.0"
humantime = "2.3.0"
indicatif = {version ="0.18", features = ["rayon"]}
itertools = "0.14"
ndarray = "0.17"
object_store = "0.12.5"
ordered-float = { version = "5.3", features = ["serde"] }
polars = { version = "0.52", features = [
    "abs",
    "aws",
    "azure",
    "cum_agg",
    "diff",
    "dtype-i128",
    "dynamic_group_by",
    "ewma",
    "gcp",
    "is_in",
    "json",
    "lazy",
    "parquet",
    "polars-io",
    "rolling_window",
    "round_series",
    "strings",
    "temporal",
    "timezones",
] }
postcard = { version = "1.1", features = ["use-std"] }
prost = "0.14"
prost-types = "0.14"
rand = "0.10"
rayon = "1.12"
regex = "1.12"
rust_decimal = "1.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.20", features = ["chrono"] }
smallvec = { version = "1.15", features = ["serde"] }
strum = { version = "0.28", features = ["derive"] }
strum_macros = "0.28"
thiserror = "2.0"
tokio = { version = "1.52", features = ["full"] }
tokio-util = "0.7"
tonic = "0.14"
tonic-prost = "0.14"
tracing = "0.1"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
dirs = "6.0"
time = { version = "0.3", features = ["macros", "formatting"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
anyhow = "1.0"
